--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,20 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-intl": "*",
+        "bensampo/laravel-enum": "^1.29",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/airlock": "^1.0@dev",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "spatie/laravel-query-builder": "^2.5",
+        "tymon/jwt-auth": "^1.0.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laravel/ui": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
@@ -56,6 +63,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "vendor\\bin\\phpunit",
+        "test-coverage": "phpunit --coverage-html coverage"
     }
 }
