--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
             "@php artisan key:generate --ansi"
         ],
         "test": "vendor\\bin\\phpunit",
-        "test-coverage": "phpunit --coverage-html coverage"
+        "test-coverage": "phpunit --coverage-html coverage",
+        "test-coverage-xml": "phpunit --coverage-clover coverage.xml"
     }
 }
