--- a/composer.json
+++ b/composer.json
@@ -64,8 +64,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": "vendor\\bin\\phpunit",
+        "test": "vendor/bin/phpunit",
         "test-coverage": "phpunit --coverage-html coverage",
-        "test-coverage-xml": "phpunit --coverage-clover coverage.xml"
     }
 }
